--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -1,4 +1,4 @@
-CFLAGS="-march=haswell -O2 -pipe"
+CFLAGS="-march=haswell -O3 -pipe"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 FEATURES="parallel-fetch collision-protect"
@@ -21,7 +21,7 @@ SYSTEMUSE="acpi bidi caps crypt css filecaps introspection kmod libffi lm_sensor
  
 FILESYS="btrfs ntfs ntfs3g f2fs fat fuse jfs xfs reiserfs sysfs"
  
-XSYS="X cairo colord dga dri freetype fontconfig glamor gles2 gtk gtkmm keymap motif opengl session smp startup-notification svga truetype vaapi vdpau videos xcomposite xinerama xft xv infinality nvidia"
+XSYS="X cairo colord dga dri freetype fontconfig glamor gles2 gtk gtkmm keymap motif opengl session smp startup-notification svga truetype vaapi vdpau videos xcomposite xinerama xft xv infinality nvidia xvmc"
  
 DESKTOP="acl bash-completion bzip2 dbus gimp gnome-keyring gzip imagemagick inotify jbig lzma lzo minizip rar zlib zip"
  
