--- a/gentoo/make-install.conf
+++ b/gentoo/make-install.conf
@@ -1,4 +1,4 @@
-CFLAGS="-march=core-avx2 -O2 -pipe"
+CFLAGS="-march=haswell -O3 -pipe"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j5"
@@ -7,7 +7,7 @@ USE="${CPU_FLAGS_X86} -gpm"
 GRUB_PLATFORMS="efi-64"
 ACCEPT_KEYWORDS="amd64"
 ACCEPT_LICENSE="*"
-LINGUAS="br pt_BR pt-BR"
+LINGUAS="br pt_BR pt-BR pt-br"
 PORTDIR="/usr/portage"
 DISTDIR="${PORTDIR}/distfiles"
 PKGDIR="${PORTDIR}/packages"
