upgraded some scripts

--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -25,9 +25,9 @@ XSYS="X cairo colord dga dri freetype fontconfig glamor gles2 gtk gtkmm keymap m
  
 DESKTOP="acl bash-completion bzip2 dbus gimp gnome-keyring gzip imagemagick inotify jbig lzma lzo minizip rar zlib zip"
  
-MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg musepack ogg openal orc oss portaudio pulseaudio sound speex vorbis wavpack"
+MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg musepack ogg openal orc oss portaudio pulseaudio sound speex vorbis wavpack twolame opus schroedinger gsm ladspa modplug gme fluidsynth"
  
-CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nsplugin odbc openexr pcre pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 xmp xpm xvid"
+CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nsplugin odbc openexr pcre pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
  
 COMMS="curl ftp geoip gnutls idn imap ipv6 ldap mtp snmp ssl tcpd"
  
