--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -9,7 +9,8 @@ ACCEPT_LICENSE="*"
 AUTOCLEAN="yes"
 INPUT_DEVICES="evdev mouse keyboard joystick"
 VIDEO_CARDS="nvidia"
-LINGUAS="br pt_BR pt-BR"
+LINGUAS="pt_BR pt-BR"
+L10N="pt_BR pt-BR"
 
 BAD="-bindist -gpm -libav -libpostproc -modemmanager -xscreensaver -jack -kde -plasma -systemd -eds -minimal -cups -bluetooth -qt3 -qt4 -mono"
  
@@ -27,9 +28,9 @@ DESKTOP="acl bash-completion bzip2 clipboard dbus gimp gnome-keyring gzip imagem
  
 MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg musepack ogg openal orc oss portaudio pulseaudio sound speex vorbis wavpack twolame opus schroedinger gsm ladspa modplug gme fluidsynth"
  
-CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nsplugin odbc openexr pcre pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
+CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
  
-COMMS="curl ftp geoip gnutls http2 idn imap ipv6 ldap mtp metalink snmp ssl tcpd"
+COMMS="curl ftp geoip gnutls idn imap ipv6 ldap mtp metalink snmp ssl tcpd"
  
 USE="${BAD} ${SERVER} ${CPU_FLAGS_X86} ${SYSTEMUSE} ${FILESYS} ${XSYS} 
 ${DESKTOP} ${MEDIA} 
