--- a/gentoo/make-install.conf
+++ b/gentoo/make-install.conf
@@ -7,7 +7,8 @@ USE="${CPU_FLAGS_X86} -gpm"
 GRUB_PLATFORMS="efi-64"
 ACCEPT_KEYWORDS="amd64"
 ACCEPT_LICENSE="*"
-LINGUAS="br pt_BR pt-BR pt-br"
+LINGUAS="pt_BR pt-BR"
+L10N="pt_BR pt-BR"
 PORTDIR="/usr/portage"
 DISTDIR="${PORTDIR}/distfiles"
 PKGDIR="${PORTDIR}/packages"
