--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -22,7 +22,7 @@ SYSTEMUSE="acpi bidi caps cccache crypt css filecaps introspection kmod libffi l
  
 FILESYS="btrfs ntfs ntfs3g f2fs fat fuse jfs xfs reiserfs sysfs"
  
-XSYS="X cairo colord dga dmx dri freetype fontconfig glamor gles2 gtk gtkmm keymap motif opengl session smp startup-notification sensord svga truetype vaapi vdpau videos xcomposite xinerama xft xv infinality nvidia xvmc"
+XSYS="X cairo colord dga dmx dri freetype fontconfig glamor gles2 gtk gtkmm keymap motif opengl session smp startup-notification sensord svga truetype vaapi vdpau videos xcomposite xinerama xft xv infinality fontforge nvidia xvmc"
  
 DESKTOP="acl bash-completion bzip2 clipboard dbus gimp gnome-keyring gzip imagemagick inotify jbig lzma lzo minizip natspec rar zlib zip"
  
