--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -30,7 +30,7 @@ MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg m
  
 CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
  
-COMMS="curl ftp geoip gnutls idn imap ipv6 ldap mtp metalink snmp ssl tcpd"
+COMMS="curl ftp geoip gnutls guile idn imap ipv6 ldap mtp metalink openldap snmp ssl tcpd"
  
 USE="${BAD} ${SERVER} ${CPU_FLAGS_X86} ${SYSTEMUSE} ${FILESYS} ${XSYS} 
 ${DESKTOP} ${MEDIA} 
