--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -12,9 +12,9 @@ VIDEO_CARDS="nvidia"
 LINGUAS="pt_BR pt-BR"
 L10N="pt_BR pt-BR"
 
-BAD="-bindist -gpm -libav -libpostproc -modemmanager -xscreensaver -jack -kde -plasma -systemd -eds -minimal -cups -bluetooth -qt3 -qt4 -mono"
+BAD="-bindist -berkdb -gpm -libav -libpostproc -modemmanager -xscreensaver -jack -kde -plasma -systemd -eds -minimal -cups -bluetooth -qt3 -qt4 -mono -pam"
  
-SERVER="apm cscope cvs cxx evdev fortran gudev hwdb mhash ncurses policykit ruby sqlite suid tcl tk udev udisks unicode upower pam"
+SERVER="apm cscope cvs cxx evdev fortran gudev hwdb mhash ncurses pm-utils policykit ruby sqlite suid tcl tk udev udisks unicode upower"
  
 CPU_FLAGS_X86="aes avx avx2 fma3 mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
  
@@ -22,13 +22,13 @@ SYSTEMUSE="acpi bidi caps cccache crypt css filecaps introspection kmod libffi l
  
 FILESYS="btrfs ntfs ntfs3g f2fs fat fuse jfs xfs reiserfs sysfs"
  
-XSYS="X cairo colord dga dmx dri freetype fontconfig glamor gles2 gtk gtkmm keymap motif opengl session smp startup-notification sensord svga truetype vaapi vdpau videos xcomposite xinerama xft xv infinality fontforge nvidia xvmc"
+XSYS="X cairo colord dga dmx dri freetype fontconfig glamor gles2 gtk gtkmm keymap motif opengl session smp startup-notification sensord sna svga truetype vaapi vdpau videos xcomposite xinerama xft xv infinality fontforge nvidia xvmc"
  
 DESKTOP="acl bash-completion bzip2 clipboard dbus gimp gnome-keyring gzip imagemagick inotify jbig lzma lzo minizip natspec rar zlib zip"
  
-MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg musepack ogg openal orc oss portaudio pulseaudio sound speex vorbis wavpack twolame opus schroedinger gsm ladspa modplug gme fluidsynth"
+MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg musepack ogg openal orc oss portaudio postproc pulseaudio sound speex vorbis wavpack twolame opus schroedinger gsm ladspa modplug gme fluidsynth"
  
-CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
+CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nvenc nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
  
 COMMS="curl ftp geoip gnutls guile idn imap ipv6 ldap mtp metalink openldap snmp ssl tcpd"
  
