some gentoo updates

--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -18,19 +18,19 @@ SERVER="apm cscope cvs cxx evdev fortran gudev hwdb mhash ncurses pm-utils polic
  
 CPU_FLAGS_X86="aes avx avx2 fma3 mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
  
-SYSTEMUSE="acpi bidi caps cccache crypt css filecaps introspection kmod libffi lm_sensors mime mng nls nptl perl pgo python sasl usb utils v4l vim-syntax xattr xcb xml multilib abi_x86_32"
+SYSTEMUSE="acpi bidi caps cccache crypt css filecaps introspection kmod libffi libopts lm_sensors mime mng nettle nls nptl perl pgo python sasl usb utils v4l vim-syntax xattr xcb xml multilib abi_x86_32"
  
-FILESYS="btrfs ntfs ntfs3g f2fs fat fuse jfs xfs reiserfs sysfs"
+FILESYS="btrfs ntfs ntfs3g f2fs fat fuse jfs xfs sysfs"
  
 XSYS="X cairo colord dga dmx dri freetype fontconfig glamor gles2 gtk gtkmm keymap motif opengl session smp startup-notification sensord sna svga truetype vaapi vdpau videos xcomposite xinerama xft xv infinality fontforge nvidia xvmc"
  
-DESKTOP="acl bash-completion bzip2 clipboard dbus gimp gnome-keyring gzip imagemagick inotify jbig lzma lzo minizip natspec rar zlib zip"
+DESKTOP="acl bash-completion bzip2 clipboard dbus gimp gnome-keyring gzip imagemagick inotify jbig lzma lzo minizip natspec rar tools zlib zip"
  
 MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg musepack ogg openal orc oss portaudio postproc pulseaudio sound speex vorbis wavpack twolame opus schroedinger gsm ladspa modplug gme fluidsynth"
  
-CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg lcms libass libcaca libnotify libsamplerate nvenc nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
+CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg jpeg2k lcms libass libcaca libnotify libsamplerate nvenc nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
  
-COMMS="curl ftp geoip gnutls guile idn imap ipv6 ldap mtp metalink openldap snmp ssl tcpd"
+COMMS="curl ftp geoip gnutls guile idn imap ipv6 ldap mtp metalink openldap snmp ssl tcpd traceroute"
  
 USE="${BAD} ${SERVER} ${CPU_FLAGS_X86} ${SYSTEMUSE} ${FILESYS} ${XSYS} 
 ${DESKTOP} ${MEDIA} 
