--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -1,36 +1,36 @@
-CFLAGS="-march=haswell -O3 -pipe"
+CFLAGS="-march=znver3 -O2"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 FEATURES="parallel-fetch collision-protect"
 GRUB_PLATFORMS="efi-64"
 ACCEPT_KEYWORDS="amd64"
-MAKEOPTS="-j5"
+MAKEOPTS="-j17"
 ACCEPT_LICENSE="*"
 AUTOCLEAN="yes"
-INPUT_DEVICES="evdev mouse keyboard joystick"
-VIDEO_CARDS="nvidia"
+INPUT_DEVICES="evdev mouse keyboard libinput joystick synaptics"
+VIDEO_CARDS="intel i965"
 LINGUAS="pt_BR pt-BR"
 L10N="pt_BR pt-BR"
 
-BAD="-bindist -berkdb -gpm -libav -libpostproc -modemmanager -xscreensaver -jack -kde -plasma -systemd -eds -minimal -cups -bluetooth -qt3 -qt4 -mono -pam"
+BAD="-amd -amdgpu -bindist -clang -filecaps -gpm -vdpau -libav -libpostproc -modemmanager -networkmanager -nvidia -nouveau -xscreensaver -jack -kde -plasma -systemd -eds -minimal -cups -qt3 -qt4 -qt5 -mono"
  
-SERVER="apm cscope cvs cxx evdev fortran gudev hwdb mhash ncurses pm-utils policykit ruby sqlite suid tcl tk udev udisks unicode upower"
+SERVER="sasl ldap apm cscope cxx evdev gudev hwdb ncurses pm-utils policykit suid tk udev unicode upower"
  
-CPU_FLAGS_X86="aes avx avx2 fma3 mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
+CPU_FLAGS_X86="aes avx f16c mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
  
-SYSTEMUSE="acpi bidi caps ccache crypt css filecaps hddtemp introspection kmod libffi libopts lm_sensors mime mng nettle nls nptl openssl openssh perl pgo python sasl ssh ssl usb utils v4l vim-syntax xattr xcb xml multilib abi_x86_32"
+SYSTEMUSE="acpi archive css hddtemp introspection kmod lm_sensors mime openssl openssh python secure-delete sqlite threads usb v4l xcb xml multilib abi_x86_32"
  
-FILESYS="btrfs ntfs ntfs3g f2fs fat fuse jfs xfs sysfs"
+FILESYS="ntfs ntfs3g f2fs fat fuse jfs xfs sysfs"
  
-XSYS="X cairo colord dga dmx dri dri3 egl freetype fontconfig glamor gles2 gtk gtkmm keymap libkms motif opengl session smp startup-notification sensord sna svga truetype vaapi vdpau videos xlib-xcb xcomposite xinerama xft xv infinality fontforge nvidia xvmc Xaw3d"
+XSYS="X argyllcms animation-rtl cairo colord dga dri dri3 egl freetype fontconfig glamor gles gtk layers libdrm libkms ocl-icd opengl session smp startup-notification sensord sna truetype vaapi vulkan xa xlib-xcb xcomposite xinerama xft xrandr xv infinality xvmc Xaw3d"
  
-DESKTOP="acl bash-completion bzip2 clipboard dbus gnome-keyring gzip imagemagick inotify jbig lz4 lzma lzo minizip natspec rar toolbar tools zlib zip"
+DESKTOP="bash-completion bzip2 clipboard dbus gnome-keyring gzip imagemagick inotify keybinder lz4 lzma lzo minizip natspec qml rar tar toolbar zlib zip"
  
-MEDIA="aac alsa bs2b cue ffmpeg flac faac faad gstreamer lame mad mp3 mp4 mpeg musepack ogg openal opus orc oss portaudio postproc pulseaudio sound speex vorbis wavpack twolame schroedinger gsm ladspa modplug gme fluidsynth"
+MEDIA="aac alisp alsa bs2b contrast cue custom-modes ffmpeg flac faac faad gstreamer lame libass lv2 mp3 mp3rtp mp4 mpeg musepack ogg openal opus orc portaudio postproc pulseaudio sound speex vorbis wavpack twolame gsm ladspa modplug gme fluidsynth"
  
-CODECS="a52 aalib ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw gd gdbm gif gmp icu jpeg jpeg2k lcms libass libcaca libnotify libsamplerate nvenc nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline rtsp sdl sndfile svg taglib theora threads tiff vcd wmf x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
+CODECS="a52 10bit aalib aacs ambisonics ao audiofile cdda cddb cdinstall dts dvd dvdr encode fftw fpx gdbm gif hdri icu jpeg jpeg2k lcms libcaca libnotify matroska nsplugin odbc openexr pcre pcre16 pcre32 pdf png raw readline rtsp sdl sndfile svg taglib theora tiff vcd wmf webp x264 x265 xmp xpm xvid fribidi bluray cdio vpx"
  
-COMMS="curl ftp geoip gnutls guile idn imap ipv6 ldap mtp metalink networking openldap rtmp librtmp snmp ssl ssh tcpd traceroute"
+COMMS="bluetooth curl ftp imap ipv6 mtp metalink network networking tcpd traceroute wps"
  
 USE="${BAD} ${SERVER} ${CPU_FLAGS_X86} ${SYSTEMUSE} ${FILESYS} ${XSYS} 
 ${DESKTOP} ${MEDIA} 
