--- a/gentoo/make-install.conf
+++ b/gentoo/make-install.conf
@@ -1,8 +1,8 @@
-CFLAGS="-march=haswell -O3 -pipe"
+CFLAGS="-march=znver3 -O2"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
-MAKEOPTS="-j5"
-CPU_FLAGS_X86="aes avx avx2 fma3 mmx mmxext popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
+MAKEOPTS="-j9"
+CPU_FLAGS_X86="aes avx f16c mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 USE="${CPU_FLAGS_X86} -gpm"
 GRUB_PLATFORMS="efi-64"
 ACCEPT_KEYWORDS="amd64"
