slackware scripts updated

--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -1,10 +1,10 @@
-CFLAGS="-march=znver3 -O2"
+CFLAGS="-march=kabylake -O3"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 FEATURES="parallel-fetch collision-protect"
 GRUB_PLATFORMS="efi-64"
 ACCEPT_KEYWORDS="amd64"
-MAKEOPTS="-j17"
+MAKEOPTS="-j9"
 ACCEPT_LICENSE="*"
 AUTOCLEAN="yes"
 INPUT_DEVICES="evdev mouse keyboard libinput joystick synaptics"
