--- a/gentoo/make-install.conf
+++ b/gentoo/make-install.conf
@@ -1,7 +1,7 @@
-CFLAGS="-march=kabylake -O3 -pipe"
+CFLAGS="-march=znver3 -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
-MAKEOPTS="-j9"
+MAKEOPTS="-j17"
 CPU_FLAGS_X86="aes avx f16c mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 USE="${CPU_FLAGS_X86} -gpm"
 GRUB_PLATFORMS="efi-64"
