--- a/gentoo/make-final.conf
+++ b/gentoo/make-final.conf
@@ -11,6 +11,10 @@ INPUT_DEVICES="evdev mouse keyboard libinput joystick synaptics"
 VIDEO_CARDS="nvidia"
 LINGUAS="pt_BR pt-BR"
 L10N="pt_BR pt-BR"
+PORTDIR="/usr/portage"
+DISTDIR="${PORTDIR}/distfiles"
+PKGDIR="${PORTDIR}/packages"
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 vpclmulqdq"
+WORLD_USE="introspection lm-sensors lm_sensors python pulseaudio vala xinerama zstd"
 
-USE="${CPU_FLAGS_X86}"
+USE="${CPU_FLAGS_X86} ${WORLD_USE}"
