--- a/gentoo/make-install.conf
+++ b/gentoo/make-install.conf
@@ -2,7 +2,7 @@ CFLAGS="-march=znver3 -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 CHOST="x86_64-pc-linux-gnu"
 MAKEOPTS="-j17"
-CPU_FLAGS_X86="aes avx f16c mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 vpclmulqdq"
 USE="${CPU_FLAGS_X86} -gpm"
 GRUB_PLATFORMS="efi-64"
 ACCEPT_KEYWORDS="amd64"
