--- a/funtoo/make.conf
+++ b/funtoo/make.conf
@@ -1,7 +1,9 @@
-CFLAGS="-march=core-avx2 -O2 -pipe"
+CFLAGS="-march=znver3 -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j5"
-LINGUAS="pt_BR"
+MAKEOPTS="-j17"
+LINGUAS="pt_BR pt-BR"
+L10N="pt_BR pt-BR"
 VIDEO_CARDS="nvidia"
 ACCEPT_LICENSE="*"
-USE=""
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 vpclmulqdq"
+USE="${CPU_FLAGS_X86}"
