--- a/slack/configs/slackpkgplus.conf
+++ b/slack/configs/slackpkgplus.conf
@@ -87,6 +87,10 @@ SHOWORDER=package
 # Allow to show more details of the package in 'slackpkg info <package>'. Accepts "none", "basic", "filelist"
 DETAILED_INFO=basic
 
+# Define the GPG variable if not already defined by slackpkg: prefer gpg (1.x) on 15.0 like in the newer slackpkg,
+# on newer Slackware is already defined by /usr/libexec/slackpkg/core-functions.sh
+GPG=${GPG:-gpg}
+
 # Enable (on) / Disable (off) a Strict GPG Check. A repository should contains packages signed
 # with the only original GPG-KEY. In some custom repository may be wanted to mix heterogeneous
 # packages; to use that repository set Strict GPG Check to off. P.S: a repository can
@@ -137,18 +141,18 @@ REPOPLUS=( slackpkgplus )
 #MIRRORPLUS['restricted']=https://slackware.nl/people/alien/restricted_sbrepos/15.0/x86_64
 
 # Slackware Current - x86_64
-MIRRORPLUS['multilib']=https://slackware.nl/people/alien/multilib/current/
+#MIRRORPLUS['multilib']=https://slackware.nl/people/alien/multilib/current/
+MIRRORPLUS['multilib']=http://www.slackware.com/~alien/multilib/current/
 
 # use this to keep the slackpkg+ package updated to the latest stable release
-#MIRRORPLUS['slackpkgplus']=https://slakfinder.org/slackpkg+15/
-MIRRORPLUS['slackpkgplus']=https://slackware.nl/slackpkgplus15/
+MIRRORPLUS['slackpkgplus']=https://slackware.nl/slackpkgplus/
 
 # use the development branch to use the mainline version and help develop by reporting bugs.
-#MIRRORPLUS['slackpkgplus']=https://slakfinder.org/slackpkg+dev/
+#MIRRORPLUS['slackpkgplus']=https://slackware.nl/slackpkgplusdev/
 
 
 # Local repository:
-#MIRRORPLUS['alienbob']=file://repositories/alien/sbrepos/15.0/x86/
+#MIRRORPLUS['alienbob']=file://repositories/alien/sbrepos/15.0/x86_64/
 #
 # Local packages (you do not need metadata nor 'slackpkg update' command):
 #MIRRORPLUS['myrepo']=dir://repositories/mypackages/
@@ -161,7 +165,7 @@ MIRRORPLUS['slackpkgplus']=https://slackware.nl/slackpkgplus15/
 # This does not replace sbopkg; slackpkg just report the package, version and url; you may
 # download it via 'slackpkg download <packagename>' and build it yourself or via sbopkg.
 #SBO['15.0']=https://www.slackbuilds.org/slackbuilds/15.0/
-#SBO['current']=https://cgit.ponce.cc/slackbuilds/
+#SBO['current']=https://github.com/Ponce/slackbuilds
 
 
 # Plugin section:
@@ -189,15 +193,15 @@ MIRRORPLUS['slackpkgplus']=https://slackware.nl/slackpkgplus15/
 #
 # Supported Repositories (see /usr/doc/slackpkg+-* for details and notes):
 #
-#slackpkgplus:  https://slakfinder.org/slackpkg+{dev,1.7,1.8,15}/
+#slackpkgplus:  https://slackware.nl/slackpkgplus{dev,}/
 #multilib:      https://slackware.nl/people/alien/multilib/{15.0,current}/
 #alienbob:      https://slackware.nl/people/alien/sbrepos/{15.0,current}/{x86,x86_64}/
 #restricted:    https://slackware.nl/people/alien/restricted_sbrepos/{15.0,current}/{x86,x86_64}/
 #msb:           https://slackware.uk/msb/{15.0,current}/latest/{x86,x86_64}/
 #csb:           https://slackware.uk/csb/{15.0,current}/{x86,x86_64}/
-#slackers:      https://slack.conraid.net/repository/slackware64-current/
-#slackonly:     https://packages.slackonly.com/pub/packages/15.0-x86_64/
-#slackel:       http://www.slackel.gr/repo/{i486,x86_64}/current/
+#slackers:      https://slackers.it/repository/slackware64-current/
+#slackonly:     https://packages.slackonly.com/pub/packages/{15.0,current}-x86_64/
+#slackel:       http://www.slackel.gr/repo/{i486,x86_64}/{slackware-,}current/
 #slint:         https://slackware.uk/slint/x86_64/slint-15.0/
 #salixos:       https://download.salixos.org/{i486,x86_64}/15.0/
 #salixextra:    https://download.salixos.org/{i486,x86_64}/extra-15.0/
