slackware scripts updated

--- a/slack/configs/slackpkgplus.conf
+++ b/slack/configs/slackpkgplus.conf
@@ -141,8 +141,7 @@ REPOPLUS=( slackpkgplus )
 #MIRRORPLUS['restricted']=https://slackware.nl/people/alien/restricted_sbrepos/15.0/x86_64
 
 # Slackware Current - x86_64
-#MIRRORPLUS['multilib']=https://slackware.nl/people/alien/multilib/current/
-MIRRORPLUS['multilib']=http://www.slackware.com/~alien/multilib/current/
+MIRRORPLUS['multilib']=https://slackware.nl/people/alien/multilib/current/
 
 # use this to keep the slackpkg+ package updated to the latest stable release
 MIRRORPLUS['slackpkgplus']=https://slackware.nl/slackpkgplus/
